--- a/index.html
+++ b/index.html
@@ -124,5 +124,6 @@
             Все права защищены.
         </div>
     </footer>
-</body>
+    <script src="../scripts/"></script>
+    </body>
 </html>
