--- a/index.html
+++ b/index.html
@@ -124,6 +124,6 @@
             Все права защищены.
         </div>
     </footer>
-    <script src="../scripts/"></script>
+    <script src="./scripts/HW_2/hw_2_2.js"></script>
     </body>
 </html>
