--- a/index.html
+++ b/index.html
@@ -20,6 +20,23 @@
             <button class="hero__button" onclick="location.href='#about_games'">Поехали!</button>
         </div>
     </header>
+    
+    <div class="tag__wrapper">
+        <div class="tag">
+            <div class="tag__text">Викторина</div>
+            <div class="tag__text">угадай число</div>
+            <div class="tag__text">Переверни текст</div>
+            <div class="tag__text">Простая арифметика</div>
+            <div class="tag__text">Камень, ножницы, бумага</div>
+            <div class="tag__text">Генератор случайных цветов</div>
+            <div class="tag__text">Викторина</div>
+            <div class="tag__text">угадай число</div>
+            <div class="tag__text">Переверни текст</div>
+            <div class="tag__text">Простая арифметика</div>
+            <div class="tag__text">Камень, ножницы, бумага</div>
+            <div class="tag__text">Генератор случайных цветов</div>
+        </div>
+    </div>
 
     <section class="games-info center" id="about_games">
         <h2 class="games-info__title">Об играх</h2>
