--- a/index.html
+++ b/index.html
@@ -39,104 +39,99 @@
         </div>
     </div>
 
-    <section class="games-info center" id="about_games">
-        <h2 class="games-info__title">Об играх</h2>
-        <p class="games-info__subtitle">В моей коллекции представлено 6 игр на разные темы. Игры несложные — в них может поиграть каждый. Все игры доступны для пользования.</p>
-        <div class="games-list">
-            <a class="games-item small-item" href="#game_1">
-                <div class="games-item__img item_1"></div>
-                <div class="games-item__num">Игра №1</div>
-                <div class="games-item__title">Угадай число</div>
-            </a>
-            <a class="games-item big-item" href="#game_2">
-                <div class="games-item__img item_2"></div>
-                <div class="games-item__num">Игра №2</div>
-                <div class="games-item__title">Простая арифметика</div>
-            </a>
-
-            <a class="games-item small-item" href="#game_3">
-                <div class="games-item__img item_3"></div>
-                <div class="games-item__num">Игра №3</div>
-                <div class="games-item__title">Переверни текст</div>
-            </a>
-
-            <a class="games-item big-item" href="#game_4">
-                <div class="games-item__img item_4"></div>
-                <div class="games-item__num">Игра №4</div>
-                <div class="games-item__title">Камень, ножницы, бумага</div>
-            </a>
-
-            <a class="games-item small-item item-5" href="#game_5">
-                <div class="games-item__img item_5"></div>
-                <div class="games-item__num">Игра №5</div>
-                <div class="games-item__title">Простая викторина</div>
-            </a>
-
-            <a class="games-item big-item" href="#game_6">
-                <div class="games-item__img item_6"></div>
-                <div class="games-item__num">Игра №6</div>
-                <div class="games-item__title">Генератор случайных цветов</div>
-            </a>
+    <section class="gams-conteiner">
+        <div class="games-info center" id="about_games">
+            <h2 class="games-info__title">Об играх</h2>
+            <p class="games-info__subtitle">В моей коллекции представлено 6 игр на разные темы. Игры несложные — в них может поиграть каждый. Все игры доступны для пользования.</p>
+            <div class="games-list">
+                <a class="games-item small-item" href="#game_1">
+                    <div class="games-item__img item_1"></div>
+                    <div class="games-item__num">Игра №1</div>
+                    <div class="games-item__title">Угадай число</div>
+                </a>
+                <a class="games-item big-item" href="#game_2">
+                    <div class="games-item__img item_2"></div>
+                    <div class="games-item__num">Игра №2</div>
+                    <div class="games-item__title">Простая арифметика</div>
+                </a>
+                <a class="games-item small-item" href="#game_3">
+                    <div class="games-item__img item_3"></div>
+                    <div class="games-item__num">Игра №3</div>
+                    <div class="games-item__title">Переверни текст</div>
+                </a>
+                <a class="games-item big-item" href="#game_4">
+                    <div class="games-item__img item_4"></div>
+                    <div class="games-item__num">Игра №4</div>
+                    <div class="games-item__title">Камень, ножницы, бумага</div>
+                </a>
+                <a class="games-item small-item item-5" href="#game_5">
+                    <div class="games-item__img item_5"></div>
+                    <div class="games-item__num">Игра №5</div>
+                    <div class="games-item__title">Простая викторина</div>
+                </a>
+                <a class="games-item big-item" href="#game_6">
+                    <div class="games-item__img item_6"></div>
+                    <div class="games-item__num">Игра №6</div>
+                    <div class="games-item__title">Генератор случайных цветов</div>
+                </a>
+            </div>
         </div>
     </section>   
-    <section class="games-gallery center">
-        <div class="games-gallery__title">Мини-игры</div>
-
-        <div class="games-gallery__catalog">
-            <div class="catalog-item" id="game_1">
-                <h3 class="catalog-item__title">Угадай число</h3>
-                <p class="catalog-item__subtitle">Попробуй угадать случайное число от 1 до 100.</p>
-                <button class="catalog-item__btn">Играть!</button>
+    
+    <section class="gallery-conteiner">
+        <div class="games-gallery center">
+            <div class="games-gallery__title">Мини-игры</div>
+            <div class="games-gallery__catalog">
+                <div class="catalog-item" id="game_1">
+                    <h3 class="catalog-item__title">Угадай число</h3>
+                    <p class="catalog-item__subtitle">Попробуй угадать случайное число от 1 до 100.</p>
+                    <button class="catalog-item__btn">Играть!</button>
+                </div>
+                <div class="catalog-img item_1"></div>
             </div>
-            <div class="catalog-img item_1"></div>
-        </div>
-
-        <div class="games-gallery__catalog">
-            <div class="catalog-item" id="game_2">
-                <h3 class="catalog-item__title">Простая арифметика</h3>
-                <p class="catalog-item__subtitle">Попробуй решить простые арифметические задачи.</p>
-                <button class="catalog-item__btn">Играть!</button>
+            <div class="games-gallery__catalog">
+                <div class="catalog-item" id="game_2">
+                    <h3 class="catalog-item__title">Простая арифметика</h3>
+                    <p class="catalog-item__subtitle">Попробуй решить простые арифметические задачи.</p>
+                    <button class="catalog-item__btn">Играть!</button>
+                </div>
+                <div class="catalog-img item_2"></div>
             </div>
-            <div class="catalog-img item_2"></div>
-        </div>
-
-        <div class="games-gallery__catalog">
-            <div class="catalog-item" id="game_3">
-                <h3 class="catalog-item__title">Переверни текст</h3>
-                <p class="catalog-item__subtitle">Попробуй ввести текст, который будет перевернут.</p>
-                <button class="catalog-item__btn">Играть!</button>
+            <div class="games-gallery__catalog">
+                <div class="catalog-item" id="game_3">
+                    <h3 class="catalog-item__title">Переверни текст</h3>
+                    <p class="catalog-item__subtitle">Попробуй ввести текст, который будет перевернут.</p>
+                    <button class="catalog-item__btn">Играть!</button>
+                </div>
+                <div class="catalog-img item_3"></div>
             </div>
-            <div class="catalog-img item_3"></div>
-        </div>
-
-        <div class="games-gallery__catalog">
-            <div class="catalog-item" id="game_4">
-                <h3 class="catalog-item__title">Викторина</h3>
-                <p class="catalog-item__subtitle">Отвечай на вопросы викторины с вариантами ответов.</p>
-                <button class="catalog-item__btn">Играть!</button>
+            <div class="games-gallery__catalog">
+                <div class="catalog-item" id="game_4">
+                    <h3 class="catalog-item__title">Викторина</h3>
+                    <p class="catalog-item__subtitle">Отвечай на вопросы викторины с вариантами ответов.</p>
+                    <button class="catalog-item__btn">Играть!</button>
+                </div>
+                <div class="catalog-img item_4"></div>
             </div>
-            <div class="catalog-img item_4"></div>
-        </div>
-
-        <div class="games-gallery__catalog">
-            <div class="catalog-item" id="game_5">
-                <h3 class="catalog-item__title">Камень, ножницы, бумага</h3>
-                <p class="catalog-item__subtitle">Сыграй в популярную игру против компьютера.</p>
-                <button class="catalog-item__btn">Играть!</button>
+            <div class="games-gallery__catalog">
+                <div class="catalog-item" id="game_5">
+                    <h3 class="catalog-item__title">Камень, ножницы, бумага</h3>
+                    <p class="catalog-item__subtitle">Сыграй в популярную игру против компьютера.</p>
+                    <button class="catalog-item__btn">Играть!</button>
+                </div>
+                <div class="catalog-img item_5"></div>
             </div>
-            <div class="catalog-img item_5"></div>
-        </div>
-
-        <div class="games-gallery__catalog">
-            <div class="catalog-item" id="game_6">
-                <h3 class="catalog-item__title">Генератор случайных цветов</h3>
-                <p class="catalog-item__subtitle">Игра, в которой при клике на кнопку фон страницы меняется на случайный.</p>
-                <button class="catalog-item__btn">Играть!</button>
+            <div class="games-gallery__catalog">
+                <div class="catalog-item" id="game_6">
+                    <h3 class="catalog-item__title">Генератор случайных цветов</h3>
+                    <p class="catalog-item__subtitle">Игра, в которой при клике на кнопку фон страницы меняется на случайный.</p>
+                    <button class="catalog-item__btn">Играть!</button>
+                </div>
+                <div class="catalog-img item_6"></div>
             </div>
-            <div class="catalog-img item_6"></div>
         </div>
-
     </section> 
+
     <footer class="footer">
         <div class="footer__text">
             Все права защищены.
