--- a/index.html
+++ b/index.html
@@ -137,5 +137,6 @@
             Все права защищены.
         </div>
     </footer>
+    <script src="./scripts/HW_2/additionality_tasks/hw_2_2A.js"></script>
 </body>
 </html>
