--- a/index.html
+++ b/index.html
@@ -137,6 +137,6 @@
             Все права защищены.
         </div>
     </footer>
-    <script src="./scripts/HW_2/additionality_tasks/hw_2_2A.js"></script>
+    <script src="./scripts/HW_3/hw_3_1"></script>
 </body>
 </html>
