--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <script src="../scripts/HW_3/hw_3_1.js"></script>
+<body style="background-color: black;">
+
+    <script src="./scripts/HW_3/"></script>
 </body>
 </html>
