--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Проверка JS</title>
 </head>
 <body style="background-color: black;">
 
-    <script src="./scripts/HW_3/hw_3_1.js"></script>
+    <script src="./scripts/HW_3/hw_3_6.js"></script>
 </body>
 </html>
