--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body style="background-color: black;">
 
-    <script src="./scripts/HW_3/hw_3_6.js"></script>
+    <script src="./scripts/script.js"></script>
 </body>
 </html>
