--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Проверка JS</title>
+    <link rel="icon" href="./sign_cryptocurrency_trader_bitcoin_security_digital_agreement_contract_smart_icon_251743.ico">
 </head>
 <body style="background-color: black;">
 
