работа на 1й игрой и остальные задания из категории функции

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <div class="catalog-item" id="game_1">
                     <h3 class="catalog-item__title">Угадай число</h3>
                     <p class="catalog-item__subtitle">Попробуй угадать случайное число от 1 до 100.</p>
-                    <button class="catalog-item__btn">Играть!</button>
+                    <button class="catalog-item__btn" id="game_js_1">Играть!</button>
                 </div>
                 <div class="catalog-img item_1"></div>
             </div>
@@ -138,6 +138,6 @@
             Все права защищены.
         </div>
     </footer>
-    <script src="./scripts/HW_2/additionality_tasks/hw_2_2A.js"></script>
+    <script src="./scripts/HW_4/hw_4_1.js"></script>
 </body>
 </html>
