добавление 7 файлов js с дз

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <div class="catalog-item" id="game_1">
                     <h3 class="catalog-item__title">Угадай число</h3>
                     <p class="catalog-item__subtitle">Попробуй угадать случайное число от 1 до 100.</p>
-                    <button class="catalog-item__btn" id="game_js_1">Играть!</button>
+                    <button class="catalog-item__btn" onclick="startGame1()">Играть!</button>
                 </div>
                 <div class="catalog-img item_1"></div>
             </div>
