--- a/index.html
+++ b/index.html
@@ -138,6 +138,6 @@
             Все права защищены.
         </div>
     </footer>
-    <script src="./scripts/HW_4/hw_4_7.js"></script>
+    <script src="./scripts/script.js"></script>
 </body>
 </html>
