--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div class="catalog-item" id="game_2">
                     <h3 class="catalog-item__title">Простая арифметика</h3>
                     <p class="catalog-item__subtitle">Попробуй решить простые арифметические задачи.</p>
-                    <button class="catalog-item__btn">Играть!</button>
+                    <button class="catalog-item__btn" onclick="startGame2()">Играть!</button>
                 </div>
                 <div class="catalog-img item_2"></div>
             </div>
