--- a/test_JS.html
+++ b/test_JS.html
@@ -7,6 +7,6 @@
 </head>
 <body style="background-color: #2e2e2e;">
 
-    <script src=""></script>
+    <script src="/scripts/HW_5/hw_5_(9).js"></script>
 </body>
 </html>
