добавление файлов JS

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <div class="catalog-item" id="game_3">
                     <h3 class="catalog-item__title">Переверни текст</h3>
                     <p class="catalog-item__subtitle">Попробуй ввести текст, который будет перевернут.</p>
-                    <button class="catalog-item__btn">Играть!</button>
+                    <button class="catalog-item__btn" onclick="startGame3()">Играть!</button>
                 </div>
                 <div class="catalog-img item_3"></div>
             </div>
@@ -110,7 +110,7 @@
                 <div class="catalog-item" id="game_4">
                     <h3 class="catalog-item__title">Викторина</h3>
                     <p class="catalog-item__subtitle">Отвечай на вопросы викторины с вариантами ответов.</p>
-                    <button class="catalog-item__btn">Играть!</button>
+                    <button class="catalog-item__btn" onclick="startGame4()">Играть!</button>
                 </div>
                 <div class="catalog-img item_4"></div>
             </div>
