выполнено все дз

--- a/test_JS.html
+++ b/test_JS.html
@@ -4,38 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test JavaScripts</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
-        textarea {
-            width: 300px;
-            height: 100px;
-        }
-        button {
-            margin-top: 10px;
-            padding: 10px;
-        }
-        #result {
-            margin-top: 20px;
-            font-weight: bold;
-        }
-    </style>
 </head>
 <body style="background-color: #2e2e2e;">
-    <h1>Переворот текста</h1>
-    <textarea id="inputText" placeholder="Введите текст..."></textarea><br>
-    <button onclick="reverseText()">Перевернуть текст</button>
-    <div id="result"></div>
-
-    <!-- <script src="/scripts/HW_6/hw_6_ (1).js"></script> -->
-    <script>
-        function reverseText() {
-            const input = document.getElementById("inputText").value;
-            const reversed = input.split('').reverse().join('');
-            document.getElementById("result").innerText = `Перевернутый текст: ${reversed}`;
-        }
-    </script>
-</body>
+    <h1 style="
+        display: flex;
+        font-size: 200px;
+        margin: 25vw;
+        align-items: center;
+        justify-content: center;
+        border: 20px solid #000;
+        padding: 10px 20px;
+        border-radius: 120px;
+        box-shadow: 10px 20px 5px white;
+        text-shadow: 3px 4px 2px #3cff00;
+        ">ТЕСТОВАЯ СТРАНИЦА</h1>
+    <script src="/scripts/HW_7/hw_7_(10).js"></script>
+    </body>
 </html>
