--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <div class="catalog-item" id="game_6">
                     <h3 class="catalog-item__title">Генератор случайных цветов</h3>
                     <p class="catalog-item__subtitle">Игра, в которой при клике на кнопку фон страницы меняется на случайный.</p>
-                    <button class="catalog-item__btn" onclick="startGame6()">Играть!</button>
+                    <button class="catalog-item__btn" id="game_6">Играть!</button>
                 </div>
                 <div class="catalog-img item_6"></div>
             </div>
