поправил название игр и убрал их  несоответсвие 4 и 5 игры

--- a/index.html
+++ b/index.html
@@ -108,16 +108,16 @@
             </div>
             <div class="games-gallery__catalog">
                 <div class="catalog-item" id="game_4">
-                    <h3 class="catalog-item__title">Викторина</h3>
-                    <p class="catalog-item__subtitle">Отвечай на вопросы викторины с вариантами ответов.</p>
+                    <h3 class="catalog-item__title">Камень, ножницы, бумага</h3>
+                    <p class="catalog-item__subtitle"></p>
                     <button class="catalog-item__btn" onclick="startGame4()">Играть!</button>
                 </div>
-                <div class="catalog-img item_4"></div>
+                <div class="catalog-img item_4">Сыграй в популярную игру против компьютера.</div>
             </div>
             <div class="games-gallery__catalog">
                 <div class="catalog-item" id="game_5">
-                    <h3 class="catalog-item__title">Камень, ножницы, бумага</h3>
-                    <p class="catalog-item__subtitle">Сыграй в популярную игру против компьютера.</p>
+                    <h3 class="catalog-item__title">Викторина</h3>
+                    <p class="catalog-item__subtitle">Отвечай на вопросы викторины с вариантами ответов.</p>
                     <button class="catalog-item__btn" onclick="startGame5()">Играть!</button>
                 </div>
                 <div class="catalog-img item_5"></div>
