--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@
             <div class="games-gallery__catalog">
                 <div class="catalog-item" id="game_4">
                     <h3 class="catalog-item__title">Камень, ножницы, бумага</h3>
-                    <p class="catalog-item__subtitle"></p>
+                    <p class="catalog-item__subtitle">Сыграй в популярную игру против компьютера.</p>
                     <button class="catalog-item__btn" onclick="startGame4()">Играть!</button>
                 </div>
-                <div class="catalog-img item_4">Сыграй в популярную игру против компьютера.</div>
+                <div class="catalog-img item_4"></div>
             </div>
             <div class="games-gallery__catalog">
                 <div class="catalog-item" id="game_5">
